Text added and Icon alignment fixed
changed the lorem ipsum text, and finally fixed the menu's icon alignment and padding

--- a/static/style.css
+++ b/static/style.css
@@ -41,10 +41,15 @@ html, body{
     font-size: 1rem;
     background: black;
     color: white;
-    padding: 0.3rem;
+    text-align: center;
+    margin-top: 0.1rem;
+    padding-left: 0.54rem;
+    padding-top: 0.4rem;
+    padding-right: 0.54rem;
+    padding-bottom: 0.2rem;
     margin-right: 0.5rem;
     margin-left: 0.5rem;
-    border-radius: 50%;
+    border-radius: 60%;
     transition: 0.3s;
     text-decoration: none;
 }
